<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>point_cloud_tools</name>
  <version>0.1.0</version>
  <description>C++ tools for point cloud manipulation.</description>
  <maintainer email="stuart.g.johnson@gmail.com">sjohnson</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Public dependencies, needed by downstream packages -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Private dependencies, only needed for this package to build -->
  <build_depend>libpcl-all-dev</build_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
